admin panel work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,12 +39,11 @@
 li {
   font-size: 14px;
 }
-
+/* 
 a {
-  color: rgb(34, 34, 34);
   text-decoration: none;
   cursor: pointer;
-}
+} */
 
 
 .heads {
